# expected

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml
cmake/: beman.expected-config.cmake.in
examples/: CMakeLists.txt  identity_as_default_projection.cpp  identity_direct_usage.cpp
include/beman/expected/: CMakeLists.txt  identity.hpp
tests/beman/expected/: CMakeLists.txt  identity.test.cpp
